# idml-mobile-reflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run_gui.cmd
.github/workflows/: ci.yml
scripts/: create_shortcut.ps1  serve_reflow.ps1
src/idml2mobile/: __init__.py  __main__.py  cli.py  config.py  gui.py  pipeline.py
src/idml2mobile/assets/: __init__.py  convert.py  pdf_visuals.py  repository.py
src/idml2mobile/cleanup/: __init__.py  passes.py
src/idml2mobile/commands/: __init__.py  base.py  batch.py  convert.py  inspect.py  validate.py
src/idml2mobile/idml/: __init__.py  adapter.py  package.py  validator.py
src/idml2mobile/mathconv/: __init__.py  equations.py  latex.py  mathml.py
src/idml2mobile/model/: __init__.py  blocks.py  builder.py
src/idml2mobile/observers/: __init__.py  base.py  progress.py
src/idml2mobile/parsers/: __init__.py  base.py  factory.py  resource_parser.py  spread_parser.py  story_parser.py
src/idml2mobile/qa/: __init__.py  checks.py
src/idml2mobile/reading_order/: __init__.py  strategies.py
src/idml2mobile/render/: __init__.py  base.py  facsimile.py  factory.py  html_renderer.py  pdf_renderer.py  style_builder.py
src/idml2mobile/resources/: equations.json
tests/: conftest.py  test_cleanup_images.py  test_perfection_rules.py  test_qa.py  test_reading_order.py  test_story_parser.py
