[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idml2mobile"
version = "0.1.0"
description = "Convert double-column IDML/InDesign packages into single-column, mobile-friendly PDFs with no horizontal scrolling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "idml2mobile contributors" }]
keywords = ["idml", "indesign", "pdf", "mobile", "reflow", "playwright"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "lxml>=4.9",
    "click>=8.1",
    "Pillow>=10.0",
    "jinja2>=3.1",
    "playwright>=1.40",
    "rich>=13.0",
    "pymupdf>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
idml2mobile = "idml2mobile.cli:main"

[project.gui-scripts]
idml2mobile-gui = "idml2mobile.gui:main"

[project.urls]
Homepage = "https://github.com/shravankumar1-afk/idml-mobile-reflow"
Issues = "https://github.com/shravankumar1-afk/idml-mobile-reflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/idml2mobile"]

[tool.hatch.build.targets.wheel.force-include]
"src/idml2mobile/resources/idml2mobile.ico" = "idml2mobile/resources/idml2mobile.ico"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

